# web_gomoku

./: README.md  package-lock.json
front/: package-lock.json  package.json  vue.config.js
front/src/: App.vue  main.ts
front/src/router/: index.ts
front/src/services/: axios.ts
front/src/views/: Gomoku.vue  Home.vue
front/src/wasm/: gomoku.d.ts  gomoku.js
ui/: Dockerfile  package-lock.json  package.json  vue.config.js
ui/public/: gomoku.js  gomoku_bg.wasm.d.ts  index.html  index.js  worker.js
ui/src/: App.vue  main.js
ui/src/components/: HeaderComp.vue
ui/src/router/: index.js
ui/src/views/: Gomoku.vue  GomokuAI.vue  GomokuOnline.vue  Home.vue
wasm/: .gitignore  Cargo.toml  README.md  build.sh  gomoku.d.ts  gomoku.js  gomoku_bg.wasm.d.ts  index.html  index.js  run.sh
wasm/src/: lib.rs  types.rs
