[package]
name = "gomoku"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
strum = "0.24.1"
strum_macros = "0.24.3"
array-init = "2.1.0"

[dependencies.web-sys]
version = "0.3.23"
features = [
  'Window',
  'Performance',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
  'ErrorEvent',
  'Event',
  'Worker',
]
